--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ table {
     --font-semibold: SF Pro Text Semibold;
     --block-font: MonaSans;
     --style-font: SeoulHangang;
-    --body-color: #000000;
+    --body-color: #080808;
     --font-color: #CCCFCA;
     --text-shadow: 0 0 5px #cccfcabf;
     --mobile-header-button-padding: 0.6875rem 1.0625rem;
@@ -282,8 +282,8 @@ h1 {
 /* Work Page Styles */
 
 :root {
-    --work-detiails-font-size: 0.6875rem;
-    --work-detiails-line-height: 1.1375rem;
+    --work-detiails-font-size: 0.7875rem;
+    --work-detiails-line-height: 1.4375rem;
     --works-name-margin-bottom: 1rem;
     --work-button-wrap-margin-top: 2rem;
     --work-wrap-padding-top: 0.625rem;
@@ -291,6 +291,10 @@ h1 {
     --work-wrap-border: 1px solid #202020;
     --work-margin-top: 3rem;
     --work-container-margin-top: 1rem;
+    --work-about-role-btn-font-size: 10px;
+    --work-about-role-btn-padding: 0.625rem 0.8375rem;
+    --work-about-role-desc-line-height: 1.375rem;
+    --work-about-role-desc-font-size: 0.8125rem;
 }
 
 
@@ -336,7 +340,7 @@ h3 {
     margin-top: var(--work-button-wrap-margin-top);
 }
 
-.work-wrap {
+.work-padding {
     padding-top: var(--work-wrap-padding-top);
     padding-bottom: var(--work-wrap-padding-bottom);
     border-top: var(--work-wrap-border);
@@ -351,6 +355,91 @@ h3 {
     margin-top: var(--work-container-margin-top);
 }
 
-.work-wrap-no-border {
+.work-padding-no-border {
     border-top: 0;
+}
+
+.work-img {
+    max-width: 100%;
+}
+
+.work-about-role-btn {
+    font-family: var(--font-regular);
+    font-size: var(--work-about-role-btn-font-size);
+    background-color: transparent;
+    color: var(--font-color);
+    text-shadow: var(--text-shadow);
+    margin-bottom: 1rem;
+}
+
+.work-about-role-desc {
+    font-family: var(--font-regular);
+    color: var(--font-color);
+    line-height: var(--work-detiails-line-height);
+    font-size: var(--work-about-role-desc-font-size);
+    opacity: 0.9;
+    text-shadow: var(--text-shadow);
+}
+
+.work-about-role-wrap-botm {
+    margin-top: 1.5rem;
+}
+
+.work-about-role-container {
+    margin-top: 2.5rem;
+}
+
+.work-img-wrap {
+    margin-top: 1.5rem;
+}
+
+.work-about-sharp-radius {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.about-txt {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.sharp-radius-svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    position: absolute;
+}
+
+.badge-container { 
+    position: relative;
+    width: max-content;
+    height: max-content;
+    display: grid;
+    place-items: center;
+    padding: 0;
+}
+
+.badge-text { 
+    position: absolute;
+    top: 6px;
+}
+
+.work-img-wrap {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.work-project-desc-container{
+    height: 0;
+    overflow: hidden;
+    transition: all .5s ease-in-out;
+}
+  
+.work-project-desc-container.toggled{
+    height: 100%;
+    overflow: auto; 
+    transition: all .5s ease-in-out;
 }
