--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ table {
     font-family: SF Pro Text Semibold;
     src: url(../fonts/SF-Pro-Text-Semibold.otf);
 }
+@font-face {
+    font-family: SF Pro Text Medium;
+    src: url(../fonts/SF-Pro-Text-Medium.otf);
+}
 
 @font-face {
     font-family: SeoulHangang;
@@ -53,6 +57,7 @@ table {
 :root {
     --font-regular: SF Pro Text;
     --font-semibold: SF Pro Text Semibold;
+    --font-medium: SF Pro Text Medium;
     --block-font: MonaSans;
     --style-font: SeoulHangang;
     --body-color: #080808;
@@ -423,7 +428,7 @@ h3 {
 
 .badge-text { 
     position: absolute;
-    top: 6px;
+    top: 0.375rem;
 }
 
 .work-img-wrap {
@@ -439,7 +444,101 @@ h3 {
 }
   
 .work-project-desc-container.toggled{
-    height: 100%;
+    height: max-content;
     overflow: auto; 
     transition: all .5s ease-in-out;
+}
+
+/* Email Block Styles */
+
+.email-txt {
+    font-size: 1.7rem;
+    font-family: var(--font-regular);
+    line-height: 2.2438rem;
+    color: var(--font-color);
+    text-shadow: var(--text-shadow);
+    letter-spacing: -.8px;
+}
+
+.email-txt-link {
+    font-size: 1.7rem;
+    font-family: var(--style-font);
+    line-height: var(--mobile-h1-font-line-height);
+    color: var(--font-color);
+    text-shadow: var(--text-shadow);
+    text-decoration: none;
+    letter-spacing: -1.6px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.email-block-container {
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+}
+
+/* End */
+
+.spotify-txt {
+    font-family: var(--style-font);
+    color: var(--font-color);
+    font-size: var(--time-location-font-size);
+    text-shadow: var(--text-shadow);
+    margin-left: 7px;
+}
+
+.spotify-playlist-wrap {
+    display: flex;
+    align-items: center;
+}
+
+.spotify-back-up-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px 0;
+    border-top: 1px solid #202020;
+    /* border-bottom: 1px solid #202020; */
+}
+
+/* .designed-built-txt {
+    font-family: var(--font-regular);
+    color: var(--font-color);
+    font-size: 1rem;
+    text-shadow: var(--text-shadow);
+    margin-left: 7px;
+}
+
+.credit-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px 0;
+}
+
+.credit-txt {
+    font-family: var(--style-font);
+    color: var(--font-color);
+    font-size: 1rem;
+    text-shadow: var(--text-shadow);
+}
+
+.year-wrap {
+    display: flex;
+    align-items: center;
+} */
+
+.back-to-top-btn {
+    font-family: var(--font-regular);
+    font-size: var(--mobile-header-button-font-size);
+    padding: var(--mobile-header-button-padding);
+    background-color: transparent;
+    color: var(--font-color);
+    border-radius: var(--button-border-radius);
+    border: var(--mobile-border);
+    transition: all 0.3s ease;
+    cursor: pointer;
+    text-shadow: var(--text-shadow);
 }
