--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,8 @@ table {
     --mobile-h1-font-size: 1.875rem;
     --mobile-h1-font-line-height: 2.3438rem;
     --mobile-h1-margin-bottom: 1.5rem;
-    --mobile-heroP-font-size: 0.9375rem;
+    --mobile-heroP-font-size: 1rem;
+    --mobile-heroP-letter-spacing: -0.05rem;
     --mobile-heroP-font-line-height: 1.5625rem;
     --hero-wrap-margin-top: 10rem;
     --mobile-links-font-size: 0.875rem;
@@ -103,6 +104,14 @@ body {
     color: var(--font-color);
     font-size: var(--time-location-font-size);
     text-shadow: var(--text-shadow);
+}
+
+.time-location-wrap {
+    display: flex;
+}
+
+.location-txt {
+    margin-left: 0.375rem;
 }
 
 .main-btn {
@@ -173,6 +182,7 @@ h1 {
     text-shadow: var(--text-shadow);
     font-size: var(--mobile-heroP-font-size);
     line-height: var(--mobile-heroP-font-line-height);
+    letter-spacing: var(--mobile-heroP-letter-spacing);
 }
 
 .hero-wrap {
@@ -192,6 +202,7 @@ h1 {
     font-size: var(--mobile-links-font-size);
     color: var(--font-color);
     text-decoration: none;
+    letter-spacing: -0.05rem;
     /* margin-right: 2rem; */
 }
 
@@ -272,7 +283,7 @@ h1 {
 @media (min-width: 1024px) {
     :root {
         --mobile-h1-font-size: 2.8125rem;
-        --mobile-nav-padding: 2rem;
+        --mobile-nav-padding: 3rem;
         --hero-wrap-margin-top: 15rem;
         --mobile-main-padding: 0rem
     }
@@ -521,10 +532,11 @@ a {
 }
 
 .email-block-container {
-    margin-top: 7rem;
-    margin-bottom: 7rem;
+    display: grid;
+    place-items: center;
     padding-left: var(--mobile-nav-padding);
     padding-right: var(--mobile-nav-padding);
+    height: 380px;
 }
 
 /* End */
@@ -756,6 +768,7 @@ a {
     :root {
         --work-wrap-padding-top: 1.7rem;
         --work-wrap-padding-bottom: 1.7rem;
+        --mobile-main-padding: 3rem
     }
 
     .works-block-txt {
@@ -775,6 +788,8 @@ a {
 
     .email-txt {
         font-size: 38px;
+        max-width: 50%;
+        line-height: 50px;
     }
 
     .email-txt-link {
@@ -790,8 +805,7 @@ a {
     } */
 
     .email-block-container {
-        margin-top: 17rem;
-        margin-bottom: 17rem;
+        height: 600px;
     }
 
     .email-txt {
@@ -808,5 +822,212 @@ a {
 
     .social-links-container {
         display: block;
+    }
+}
+
+/* End */
+
+
+
+/* About Page Styles */
+
+.intro-block-txt {
+    font-family: var(--block-font);
+    font-size: clamp(25px, 5vw, 70px);
+    text-shadow: var(--text-shadow);
+    text-transform: uppercase;
+    letter-spacing: -0.1rem;
+    color: var(--font-color);
+    white-space: nowrap;
+}
+
+.intro-block {
+    padding-left: var(--mobile-main-padding);
+    padding-right: var(--mobile-main-padding);
+}
+
+.intro-txt-img-flex {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+}
+
+.intro-img-wrap {
+    display: flex;
+    /* justify-content: end; */
+}
+
+.intro-img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.intro-txt-block-margin {
+    margin-bottom: 1rem;
+    margin-top: 0.375rem;
+}
+
+.intro-block-wrap {
+    margin-top: 4rem;
+}
+
+.intro-txt-container-2 {
+    display: none;
+}
+
+.me-span {
+    font-family: var(--block-font);
+    font-size: 1.375rem;
+    text-shadow: var(--text-shadow);
+    text-transform: uppercase;
+    letter-spacing: -0.1rem;
+    color: var(--font-color);
+    white-space: nowrap;
+}
+
+.me-span-wrap {
+    margin-bottom: 2rem;
+}
+
+.me-wrap-padding {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.me-wrap-margin-top {
+    margin-top: 5rem;
+}
+
+.about-badge-wrap {
+    display: flex;
+    gap: 8px;
+}
+
+.about-p {
+    font-size: 1rem;
+    line-height: 1.875rem;
+    color: var(--font-color);
+    text-shadow: var(--text-shadow);
+    font-family: var(--font-regular);
+    letter-spacing: -0.05rem;
+}
+
+.about-p-wrap {
+    margin-top: 1.5rem;
+}
+
+.about-badge-wrap-padding {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.about-badge-container {
+    margin-top: 3.5rem;
+}
+
+.skills-wrap {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.skills-p-wrap {
+    margin-top: 1.5rem;
+}
+
+.skills-contianer {
+    margin-top: 3.5rem;
+}
+
+@media (min-width: 768px) {
+    .intro-img {
+        height: 100px;
+        width: 100px;
+        /* margin-left: -60px; */
+    }
+    
+    .intro-txt-img-flex {
+        gap: 0.9375rem;
+    }
+
+    .about-me-txt {
+        width: 100%;
+        text-align: left;
+        font-size: 1.05rem;
+        line-height: 2.1875rem;
+    }
+
+    .me-span {
+        font-size: 1.875rem;
+    }
+
+    .intro-txt-block-margin {
+        margin-bottom: 2rem;
+    }
+
+    .intro-txt-wrap-1 {
+        display: none;
+    }
+
+    .intro-txt-img-flex-1{
+        display: none;
+    }
+
+    .intro-txt-container-2 {
+        display: block;
+    }
+}
+
+@media (min-width: 1024px) {
+    .me-wrap-padding {
+        display: flex;
+        align-items: flex-start;
+        gap: 469px;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .intro-block-wrap {
+        margin-top: 7rem;
+    }
+
+    .intro-block {
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+
+    .about-badge-wrap-padding {
+        display: flex;
+        gap: 469px;
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+
+    .about-p-wrap {
+        margin-top: 0rem;
+    }
+
+    .skills-container-flex {
+        display: flex;
+        gap: 5rem;
+    }
+
+    .skills-p-wrap {
+        margin-top: 0rem;
+    }
+
+    .skills-wrap {
+        display: flex;
+        gap: 469px;
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+
+    .about-badge-container {
+        margin-top: 6rem;
+    }
+
+    .skills-contianer {
+        margin-top: 6rem;
     }
 }
