--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -939,6 +939,65 @@ a {
     margin-top: 3.5rem;
 }
 
+.my-img {
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 30px;
+}
+
+.my-img-1 {
+    z-index: 1;
+    animation-name: move-1;
+    animation-delay: 2s;
+    animation-iteration-count: linear;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes move-1 {
+    from { transform: translateY(-100px); z-index: 1; opacity: 0;}
+    to { transform: translateY(0px); z-index: 4; opacity: 1;}
+}
+
+.my-img-2 {
+    z-index: 2;
+    animation-name: move-2;
+    animation-delay: 5s;
+    animation-iteration-count: linear;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes move-2 {
+    from { transform: translateY(-100px); z-index: 1; opacity: 0;}
+    to { transform: translateY(0px); z-index: 5; opacity: 1;}
+}
+
+.my-img-3 {
+    z-index: 3;
+    animation-name: move-3;
+    animation-delay: 8s;
+    animation-iteration-count: linear;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes move-3 {
+    from { transform: translateY(-100px); z-index: 1; opacity: 0;}
+    to { transform: translateY(0px); z-index: 6; opacity: 1;}
+}
+
+.my-img-wrap {
+    position: relative;
+}
+
+.my-img-container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
 @media (min-width: 768px) {
     .intro-img {
         height: 100px;
@@ -975,6 +1034,11 @@ a {
 
     .intro-txt-container-2 {
         display: block;
+    }
+
+    .my-img {
+        width: 635.85px;
+        height: 645.14px;
     }
 }
 
