activate time and date on all three pages home, work and about

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,16 @@ body {
     text-shadow: var(--text-shadow);
 }
 
+.blink {
+    animation: blinker 1s step-start infinite;
+}
+
+@keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+}
+
 .time-location-wrap {
     display: flex;
 }
