Add casestudy links for healthily and thirsti project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,11 @@ body {
     background-color: var(--body-color);
 }
 
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 /* Preloader */ 
 
 .preloader {
