Update breakpoint 1980 and add granity url link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1326,3 +1326,13 @@ a {
         margin-left: -100px;
     }
 }
+
+@media (min-width: 1920px) {
+    .intro-img {
+        margin-left: -245px;
+    }
+
+    .about-p {
+        width: 80%;
+    }
+}
