remove second p font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ table {
 }
 
 @font-face {
-    font-family: SF Pro Text, sans-serif;
+    font-family: SF Pro Text;
     src: url(../fonts/SF-Pro-Text-Regular.otf);
 }
 
