width hero-p width for screen size 1720px and above

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,10 @@ h1 {
     :root {
         --hero-wrap-margin-top: 15rem;
     }
+    
+    .hero-p {
+        width: 60%;
+    }
 }
 
 /* End */
