--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ body {
     background-color: var(--body-color);
 }
 
+::selection {
+    background: #05FF00;
+}
+
 ::-webkit-scrollbar {
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
