--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    background-image: url(../img/noise-bg.png);
+    background-repeat: repeat;
 }
 ol, ul {
 	list-style: none;
