--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -787,11 +787,11 @@ a {
     color: var(--font-color);
     font-size: var(--time-location-font-size);
     text-shadow: var(--text-shadow);
-    margin-left: 7px;
+    margin-right: 7px;
     position: relative;
 }
 
-.spotify-txt::after {
+/* .spotify-txt::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -808,7 +808,7 @@ a {
     width: 100%;
     transform-origin: 100%;
     transform: scaleX(1);
-}
+} */
 
 .spotify-playlist-wrap {
     display: flex;
