--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,8 @@ body {
 
 .preloader {
     background-color: var(--body-color);
+    background-image: url(../img/noise-bg.png);
+    background-repeat: repeat;
     position: fixed;
     left: 0;
     right: 0;
