--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1145,11 +1145,12 @@ a {
 
 .intro-img {
     max-width: 100%;
+    width: 4.375rem;
     border-radius: 10px;
 }
 
 .intro-txt-block-margin {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     margin-top: 0.375rem;
 }
 
